UI Fixes - Font styles , Responsivness , Text align , Image resize.

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Glory:wght@221&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
 /*For Scrollbar*/
 html::-webkit-scrollbar-track
 {
@@ -23,6 +26,11 @@ html::-webkit-scrollbar-thumb
 											  transparent)
 }
 /*End Scrollbar Code*/
+
+/* title styling */
+.main-navigation{
+	font-family: 'Lobster';
+}
 
 /* Mobile first */
 
@@ -113,7 +121,7 @@ a:focus{
 	.bar1, .bar2, .bar3 {
 	  width: 35px;
 	  height: 5px;
-	  background-color:blue;
+	  background-color:rgb(149, 245, 24);
 	  margin: 6px 0;
 	  -webkit-transition: 0.4s;
 	  -o-transition: 0.4s;
@@ -146,19 +154,20 @@ a:focus{
 	font-size: 200%;
 	text-align: center;
 	color: white;
-	font-family:"Times New Roman", Times, serif;
+	font-family: 'Lobster';
 }
 .para p{
 	position: absolute;
-	top:25%;
-	left: 15%;
-	right: 15%;
-	font-family:"Times New Roman", Times, serif;
-	line-height: 120%;
+    top: 40%;
+    left: 6%;
+    text-align: left;
+    right: 42%;
+    font-family: 'Glory', sans-serif;
+    line-height: 120%;
 }
 .para span{
 	color: #10a357;
-	color: blue;
+	color: rgb(149, 245, 24);
 }
 .name .img{
 	width: 100%;
@@ -166,13 +175,13 @@ a:focus{
 /*	background-color: blue;	*/
 }
 .img .systems{
-	width:80%;
-	height: 30%;
-	margin-top: 5%;
-	position: absolute;
-	left: 8%;
-	right: 5%;
-	display: block;
+    height: 50%;
+    margin-top: 5%;
+    position: absolute;
+    left: 68%;
+    right: 5%;
+    top: 23%;
+    display: block;
 }
 .img .scroll{
 	width:100px;
@@ -214,7 +223,7 @@ a:focus{
 	}
 	a:hover{
 		color:rgba(159, 29, 179);
-		color: blue;
+		color: rgb(149, 245, 24);
 	}
 	ul{
 		list-style-type: none;
@@ -242,12 +251,35 @@ a:focus{
 	}
 	.img .scroll{
 		width:120px;
-		left: 43%;
+		left: 46%;
 	}
 }
-@media screen and (min-width: 1000px)
+@media screen and (max-width: 1000px)
 {
 	.img .systems{
-		margin-top: 3%;
+	height: 30%;
+    margin-top: 5%;
+    position: absolute;
+    left: 20%;
+    right: 5%;
+    top: 58%;
+    display: block;
+	}
+
+	.para p{
+		position: absolute;
+    width: 65%;
+    top: 20%;
+    left: 20%;
+    text-align: center;
+    right: 42%;
+    font-family: 'Glory', sans-serif;
+    line-height: 120%;
+	font-size: 2.5rem;
+	}
+
+	.img .scroll{
+		width:120px;
+		left: 34.1%;
 	}
 }
